<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linearLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/distance_title"
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/task_title_label"
		android:gravity="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/task_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:hint="@string/task_title_hint"
		android:gravity="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/distance_title" />

	<TextView
		android:id="@+id/sightmark_label"
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/task_details_label"
		android:gravity="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/task_title" />

	<TextView
		android:id="@+id/sightmark_entry"
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="110dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="36dp"
		android:layout_marginLeft="36dp"
		android:layout_marginTop="40dp"
		android:gravity="center"
		android:text="@string/sightmark_title_hint"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/sightmark_label" />

	<TextView
		android:id="@+id/task_detail"
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="110dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:layout_marginEnd="56dp"
		android:layout_marginRight="56dp"
		android:gravity="center"
		android:text="@string/extension_title_hint"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/sightmark_label" />

    <EditText
        android:id="@+id/sightmark_detail"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/sightmark_detail_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sightmark_label" />

    <EditText
        android:id="@+id/extension_detail"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/extension_detail_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sightmark_label" />

	<Button
		android:id="@+id/task_submit"
		android:layout_width="0dp"
		android:layout_height="47dp"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
