<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sightmark_layout_border">

    <TextView
        android:id="@+id/list_item_distance"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/distance_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Distance" />


    <TextView
        android:id="@+id/list_item_sightmark"
        android:layout_width="109dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sightmark" />

    <TextView
        android:id="@+id/list_item_extension"
        android:layout_width="109dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Extention" />

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/sightmark_distance_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sightmark_distance_label" />

    <TextView
        android:id="@+id/sightmark_label"
        android:layout_width="72dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:text="@string/sightmark_mark_label"
        app:layout_constraintEnd_toStartOf="@+id/list_item_sightmark"
        app:layout_constraintStart_toEndOf="@+id/list_item_distance"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sightmark_mark_label" />

    <TextView
        android:id="@+id/extention_label"
        android:layout_width="72dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:text="@string/sightmark_extension_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/list_item_extension"
        app:layout_constraintStart_toEndOf="@+id/list_item_distance"
        tools:text="@string/sightmark_extension_label" />


</android.support.constraint.ConstraintLayout>
